--- a/sources/Applications/Web/BlazorServerDirect/Apps.Web.BlazorServerDirect.csproj
+++ b/sources/Applications/Web/BlazorServerDirect/Apps.Web.BlazorServerDirect.csproj
@@ -37,6 +37,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\Extentions.DependencyInjection\Common.Extentions.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\..\Domain\Extensions\Domain.Extensions.csproj" />
+    <ProjectReference Include="..\..\Shared\ViewModels.Mappers\Domain\Apps.Shared.ViewModels.Mappers.Domain.csproj" />
     <ProjectReference Include="..\BlazorClient\Apps.Web.BlazorClient.csproj" />
     <ProjectReference Include="..\SharedUI.Blazor\Apps.Web.SharedUI.Blazor.csproj" />
   </ItemGroup>
