--- a/sources/Common/Extentions.DependencyInjection/Common.Extentions.DependencyInjection.csproj
+++ b/sources/Common/Extentions.DependencyInjection/Common.Extentions.DependencyInjection.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -24,7 +24,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Applications\Shared\ViewModels\Apps.Shared.ViewModels.csproj" />
     <ProjectReference Include="..\..\Domain\Extensions\Domain.Extensions.csproj" />
     <ProjectReference Include="..\DTO\Common.DTO.csproj" />
   </ItemGroup>
