--- a/sources/Services/Abstractions/Services.Abstractions.csproj
+++ b/sources/Services/Abstractions/Services.Abstractions.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>                                    
-    <OutputType>Library</OutputType>  <IsNetStd20 Condition="'$(TargetFramework)'=='netstandard2.0'">true</IsNetStd20>
+    <OutputType>Library</OutputType>
+    <IsNetStd20 Condition="'$(TargetFramework)'=='netstandard2.0'">true</IsNetStd20>
     <IsNetStd21 Condition="'$(TargetFramework)'=='netstandard2.1'">true</IsNetStd21>
     <IsNetCore31 Condition="'$(TargetFramework)'=='netcoreapp3.1'">true</IsNetCore31>
     <LangVersion Condition="'$(IsNetStd20)'=='true'">7.3</LangVersion>
